2015-08-21  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r23106.

	* src/html/classic/omp.xsl (html-groups-table): Add missing
	filtered-count param for list-window template call.

2015-08-21  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r23105.

	* src/html/classic/omp.xsl (html-nvt-table): Fix swapped i18n msgid and
	context for Severity column.

2015-08-21  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r23104.

	* src/html/classic/omp.xsl (edit-header-icons): Use correct URL for
	config editor help.

2015-08-20  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r23091, not including the test output removed in r23092.

	* src/gsad_omp.c (new_task): Get tag names list.
	(create_task_omp): Add option for automatically adding a tag directly
	after creating the task.

	* src/gsad.c (init_validator): Add "add_tag" parameter.

	* src/html/classic/omp.xsl (new_task): Add fields for adding a tag.

	* src/html/classic/help.xsl (new_task.html): Add help for tag fields.

2015-08-07  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r23000.

	* src/gsad.c (init_validator): Add - to hosts_opt, for ranges in Host
	Access on New User and Edit User.

2015-08-07  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport 22994.

	* src/html/classic/omp.xsl (scanner [details]): Show name of OSP
	scanner parameters instead of id.

2015-08-07  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport 22988.

	* src/gsad.c (ADD_CONTENT_SECURITY_HEADERS): Do not add headers that
	have been set to an empty string.

2015-08-06  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r22977.

	* src/gsad.c (GSAD_X_FRAME_OPTIONS, GSAD_CONTENT_SECURITY_POLICY)
	(ADD_CONTENT_SECURITY_HEADERS): New #defines for adding HTTP headers
	"X-Frame-Options" and "Content-Security-Policy".
	(send_response, send_redirect_to_uri, handler_send_response): Add new
	content security HTTP headers.