@@ -63,7 +63,7 @@ Print version.
 X-Frame-Options HTTP header. Defaults to "SAMEORIGIN".
 .TP
 .BR --http-csp=\fICSP\fR
-Content-Security-Policy HTTP header. Defaults to "default-src 'self' 'unsafe-inline'; frame-ancestors 'self'"
+Content-Security-Policy HTTP header. Defaults to "default-src 'self' 'unsafe-inline'; img-src 'self' blob:; frame-ancestors 'self'"
 .TP
 .BR -? ", " --help
 Show help.
