@@ -1,5 +1,14 @@
 2015-08-21  Timo Pollmeier <timo.pollmeier@greenbone.net>
 
+	Backport r23124.
+
+	* src/gsad.c (DEFAULT_GSAD_CONTENT_SECURITY_POLICY): Change to include
+	blob: as an img-src as required by copyable SVG of charts.
+
+	* doc/gsad.8: Update the --http-csp option accordingly.
+
+2015-08-21  Timo Pollmeier <timo.pollmeier@greenbone.net>
+
 	Backport r23106.
 
 	* src/html/classic/omp.xsl (html-groups-table): Add missing
